<resources>
    <string name="app_name">Samurai Cloud Storage</string>
    <string name="storage">Storage</string>
    <string name="temporary">Temp</string>
    <string name="settings">Settings</string>

    <!-- Preferences -->
    <string name="app_header">App settings</string>
    <string name="connection_header">Connection settings</string>
    <string name="dark_theme">Night mode</string>
    <string name="server_ip">Server Ip</string>
    <string name="download_path">Download path</string>
    <string name="upload">Upload</string>
    <string name="token">token</string>
    <string name="check_files">Check files</string>
    <string name="download">Download</string>
    <string name="choose_files">Choose files</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="session_not_restored">"Session was not restored"</string>
    <string name="logout">Logout</string>
    <string name="file_icon">File icon</string>
</resources>